def/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: pg-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - image: nginx:alpine
          name: nginx
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd
  namespace: pg-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
        - image: httpd:alpine
          name: httpd
          ports:
            - containerPort: 80
