def/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: pg-k8s
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: httpd
  namespace: pg-k8s
spec:
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 80
  selector:
    app: httpd
  type: NodePort
