def/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: pg-k8s
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - pg-k8s.local
      secretName: pg-k8s-tls
  rules:
    - host: pg-k8s.local
      http:
        paths:
          - path: /nginx
            backend:
              serviceName: nginx
              servicePort: 8080
          - path: /httpd
            backend:
              serviceName: httpd
              servicePort: 8081
